--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,11 @@ services:
     image: traefik:v1.7
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - "./traefik.toml:/etc/traefik/traefik.toml"
       - "/var/run/docker.sock:/var/run/docker.sock"
+      - "./certs:/etc/traefik/certs"
     networks:
       - traefik
   whoami:
@@ -17,6 +19,10 @@ services:
       - traefik
     labels:
       - "traefik.frontend.rule=Host:whoami.traefik.local"
+      # Note: Explicit assignment to the endpoints is needed; not sure if a bug
+      # or if setting any `traefik.frontend.*` ignores the `defaultEntryPoints`
+      # from the global config
+      - "traefik.frontend.entryPoints=http,https"
 
 
 networks:
